--- a/styles/hero.css
+++ b/styles/hero.css
@@ -17,7 +17,7 @@
       background: url(../assets/images/hero-background.png) no-repeat
         center/cover;
       opacity: 0;
-      animation: appear 3.5s 100ms linear forwards;
+      animation: 3s ease-in 100ms forwards appear;
       z-index: -1;
     }
   }
@@ -37,8 +37,16 @@
     text-align: center;
     padding-top: 3rem;
     gap: 1rem;
-    opacity: 0;
-    animation: appear 3.5s 0.8s linear forwards;
+
+    & h1{
+      opacity: 0;
+      animation: 3.5s linear 200ms forwards appear  ;
+    }
+
+    & p{
+      opacity: 0;
+      animation: 3.5s linear 1s forwards appear;
+    }
   }
 }
 
