feat: add section text description

--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,7 @@
 
   --text-title: #f8fbfb;
   --text-body: #e2e7e9;
+  --text-body-opaque: #e2e7e950;
   --text-label: #bac6c9;
 
   --ff-raleway: "Raleway", serif;
