--- a/styles/hero.css
+++ b/styles/hero.css
@@ -17,7 +17,7 @@
       background: url(../assets/images/hero-background.png) no-repeat
         center/cover;
       opacity: 0;
-      animation: 3s ease-in 100ms forwards appear;
+      animation: 3.5s ease-in-out 100ms forwards appear;
       z-index: -1;
     }
   }
@@ -38,14 +38,14 @@
     padding-top: 3rem;
     gap: 1rem;
 
-    & h1{
+    & h1 {
       opacity: 0;
-      animation: 3.5s linear 200ms forwards appear  ;
+      animation: 3s 0.8s forwards appear;
     }
 
-    & p{
+    & p {
       opacity: 0;
-      animation: 3.5s linear 1s forwards appear;
+      animation: 3s 1.4s forwards appear;
     }
   }
 }
