--- a/styles/index.css
+++ b/styles/index.css
@@ -3,4 +3,5 @@
 @import url(animations.css);
 @import url(buttons.css);
 @import url(hero.css);
-@import url(text-appear.css);
+@import url(textAppear.css);
+@import url(monthKit.css);
