--- a/styles/global.css
+++ b/styles/global.css
@@ -37,6 +37,7 @@
   --title-md: 700 2.5rem/1.5 var(--ff-raleway);
   --title-sm: 700 2rem/1.5 var(--ff-raleway);
   --title-2sm: 700 1.75rem/1.5 var(--ff-raleway);
+  --title-2xsm: 700 1.5rem/1.5 var(--ff-raleway);
   --title-3sm: 700 1.25rem/1.5 var(--ff-raleway);
   --title-xs: 700 1rem/1.5 var(--ff-raleway);
 
