--- a/styles/signatures.css
+++ b/styles/signatures.css
@@ -1,60 +1,114 @@
 section.signatures {
+  height: 712px;
+
   & h2 {
     text-align: center;
     font: var(--title-2xsm);
   }
 
-  & .card {
-    height: 25rem;
-    width: fit-content;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2rem 2rem 1.75rem;
-    margin-top: 3rem;
+  & .boxCards {
+    gap: 1rem;
+    z-index: 1;
 
-    background-color: var(--shape-base);
-    border-radius: 1rem;
-    border: solid 1px var(--shape-stroke);
+    overflow: auto hidden;
 
-    header {
-      & .plan {
-        font: var(--title-xs);
-        color: var(--blue-light);
-      }
+    &::-webkit-scrollbar{
+      display: none;
+    }
 
-      & h3 {
-        margin-top: 1.25rem;
-        font: var(--title-md);
+    & .card {
+      height: 27rem;
+      width: 17rem;
+      flex-direction: column;
+      justify-content: space-between;
+      flex-shrink: 0;
 
-        & small {
+      padding: 2rem 2rem 2rem 1.75rem;
+      margin-top: 3rem;
+
+      background-color: var(--shape-base);
+      border-radius: 1rem;
+      border: solid 1px var(--shape-stroke);
+
+      header {
+        & .plan {
           font: var(--title-xs);
+          color: var(--blue-light);
+        }
+
+        & h3 {
+          margin-top: 1.25rem;
+          font: var(--title-md);
+
+          & small {
+            font: var(--title-xs);
+          }
+        }
+
+        & .priceYear {
+          font: var(--body-sm);
+          color: var(--text-label);
         }
       }
 
-      & .priceYear {
-        font: var(--body-sm);
-        color: var(--text-label);
+      & div.details {
+        flex-direction: column;
+        gap: 1.5rem;
+
+        & ul {
+          display: flex;
+          flex-direction: column;
+          gap: 0.75rem;
+
+          li {
+            font: var(--body-xs);
+
+            & svg {
+              height: 0.75rem;
+              width: 0.75rem;
+              filter: drop-shadow(0 0 0.75rem var(--blue-base));
+
+              & path {
+                fill: var(--blue-base);
+              }
+            }
+          }
+        }
+      }
+
+      &:hover {
+        background-color: var(--shape-hover);
       }
     }
 
-    & div.details {
-      flex-direction: column;
-      gap: 1.5rem;
+    & .card:nth-child(2) {
+      position: relative;
 
-      & ul {
-        display: flex;
-        flex-direction: column;
-        gap: 0.75rem;
+      header {
+        & .plan {
+          color: var(--pink-light);
+        }
 
-        li {
-          font: var(--body-xs);
-          
-          & svg {
-            height: 0.75rem;
-            width: 0.75rem;
+        & .popular {
+          position: absolute;
+          top: 2rem;
+          right: 1.5rem;
+          padding: 0.5rem 1.25rem;
+          background-color: var(--shape-stroke);
+          font: var(--tag);
+          border-radius: 1rem;
+        }
+      }
 
-            & path {
-              fill: var(--blue-base);
+      & div.details {
+        & ul {
+          li {
+            & svg {
+              filter: drop-shadow(0 0 0.75rem var(--pink-base));
+
+              & path {
+                fill: var(--pink-base);
+              }
             }
           }
         }
