feat: add blur um the cards signatures

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,7 @@
 
   --blue-light: #73b6d2;
   --blue-base: #358bb9;
+  --blue-baseblur: rgba(53, 139, 185, 10%);
   --blue-mid: #2374a4;
   --blue-dark: #144a72;
   --blue-low: #08233c;
