--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
 @import url(utilitys.css);
 @import url(animations.css);
 @import url(buttons.css);
+@import url(blur.css);
 @import url(hero.css);
 @import url(textAppear.css);
 @import url(monthKit.css);
