--- a/styles/monthKit.css
+++ b/styles/monthKit.css
@@ -29,7 +29,7 @@
   }
 
   .monthBook {
-    height: 58vh;
+    height: 20rem;
     position: relative;
 
     & img,
@@ -126,7 +126,6 @@
       height: 17rem;
       background-color: var(--pink-low);
       filter: blur(120px);
-      z-index: -1;
     }
   }
 }
