--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,9 +1,8 @@
-.button {
+.button, .buttonSignature{
   position: relative;
   border: none;
-  padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
-  background: var(--pink-dark);
+
   color: var(--text-title);
   font: var(--button);
   cursor: pointer;
@@ -21,7 +20,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--pink-base);
     clip-path: circle(0%);
     z-index: 0;
     transition: 600ms;
@@ -32,15 +30,23 @@
   }
 }
 
+.button {
+  padding: 0.75rem 1.5rem;
+  background: var(--pink-dark);
+
+  &::after {
+    background: var(--pink-base);
+  }
+}
+
 .buttonSignature {
   padding: 0.75rem 1.25rem;
-  border-radius: 0.5rem;
-  border: none;
-  
-  font: var(--button);
-  color: var(--text-title);
 
   background-color: var(--blue-dark);
+
+  &::after {
+    background: var(--blue-base);
+  }
 }
 
 @media (max-width: 20em) {
