--- a/styles/monthKit.css
+++ b/styles/monthKit.css
@@ -2,6 +2,7 @@
   height: 631px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 4rem;
   margin-top: 6.5rem;
 
@@ -30,6 +31,7 @@
 
   .monthBook {
     height: 20rem;
+    width: 300px;
     position: relative;
 
     & img,
@@ -120,7 +122,7 @@
       }
     }
 
-    &::before{
+    &::before {
       content: " ";
       width: 17rem;
       height: 17rem;
@@ -132,12 +134,18 @@
 
 @media (max-width: 20em) {
   .monthKit {
+    align-items: normal;
+
     & header {
       & div {
         h2 {
           font: var(--title-xs);
         }
       }
+    }
+
+    .monthBook {
+      width: 100%;
     }
   }
 }
