--- a/styles/textAppear.css
+++ b/styles/textAppear.css
@@ -3,7 +3,6 @@
 
   & img {
     position: absolute;
-    transition: scale 300ms linear, transform 300ms linear;
 
     &[src*="spellbook"] {
       width: 2.5rem;
@@ -24,11 +23,6 @@
       bottom: 3rem;
       right: 1rem;
       rotate: 15deg;
-    }
-
-    &:hover {
-      transform: rotate(10deg);
-      scale: 1.1;
     }
   }
 
@@ -76,6 +70,130 @@
       h2 {
         font: var(--body-sm);
       }
+    }
+  }
+}
+
+@media (min-width: 80em) {
+  .textAppear {
+    margin-block: 8rem 14rem;
+
+    & img {
+      opacity: 0;
+      transform: scale(0);
+      transition: opacity 1s ease, transform 1s linear, scale 300ms linear,
+        rotate 300ms linear;
+
+      &[src*="spellbook"] {
+        width: 5.5rem;
+        top: 0rem;
+        right: 50%;
+        translate: 50%;
+      }
+
+      &[src*="planchette"] {
+        width: 5rem;
+        bottom: 0rem;
+        left: 1rem;
+        rotate: 99deg;
+      }
+
+      &[src*="crys"] {
+        width: 4.5rem;
+        bottom: 0rem;
+        right: 1rem;
+        rotate: -15deg;
+      }
+    }
+
+    h2 {
+      span {
+        opacity: 0.5;
+        line-height: 200%;
+
+        & strong {
+          font-weight: 700;
+        }
+      }
+    }
+
+    &:hover img {
+      opacity: 1;
+      transform: scale(1);
+
+      &[src*="spellbook"] {
+        transition-delay: 0.1s;
+
+        &:hover {
+          rotate: 30deg;
+        }
+      }
+
+      &[src*="planchette"] {
+        transition-delay: 0.9s;
+        &:hover {
+          rotate: 109deg;
+        }
+      }
+
+      &[src*="crys"] {
+        transition-delay: 1.55s;
+        &:hover {
+          rotate: -25deg;
+        }
+      }
+
+      &:hover {
+        scale: 1.1;
+        transition-delay: 0.2s;
+      }
+    }
+
+    &:not(:hover) img {
+      opacity: 0;
+      transform: scale(0);
+    }
+
+    &:hover span {
+      opacity: 1;
+
+      & strong {
+        color: var(--blue-light);
+        transition: color 1s ease;
+      }
+
+      &:nth-child(1) {
+        transition-delay: 0.1s;
+
+        & strong {
+          transition-delay: 0.1s;
+        }
+      }
+
+      &:nth-child(2) {
+        transition-delay: 0.9s;
+
+        & strong {
+          transition-delay: 0.9s;
+        }
+      }
+
+      &:nth-child(3) {
+        transition-delay: 1.55s;
+
+        & strong {
+          transition-delay: 1.55s;
+        }
+      }
+    }
+
+    & h2 {
+      padding: none;
+      font: var(--subtitle);
+    }
+
+    &::after {
+      filter: blur(140px);
     }
   }
 }
