--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,13 +1,22 @@
 footer {
+  position: relative;
   padding: 6rem 2rem 2.4rem;
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
 
-  background: url(../assets/images/book-trace-background.png) no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
+  &::before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../assets/images/book-trace-background.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    z-index: -1;
+  }
 
   & div {
     width: 100%;
@@ -73,6 +82,43 @@ footer {
           }
         }
       }
+    }
+  }
+}
+
+@media (min-width: 80em) {
+  footer {
+    height: 415px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2.5rem;
+
+    &::before {
+      content: " ";
+      top: 0;
+      left: 0;
+      background: url(../assets/images/book-trace-background.png) no-repeat;
+      background-size: cover;
+      background-position: none;
+      object-fit: contain;
+      z-index: -1;
+    }
+
+    & div {
+      width: 16.5rem;
+
+      & .logo {
+        & img {
+          height: auto;
+          width: 100%;
+        }
+      }
+    }
+
+    .even-columns {
+      width: 20rem;
+      gap: 3.5rem;
     }
   }
 }
