--- a/styles/monthKit.css
+++ b/styles/monthKit.css
@@ -190,12 +190,14 @@
     }
 
     .monthBook {
-      height: 920px;
-      width: 100%;
+      max-width: 1440px;
+      height: 940px;
+      width: 52rem;
 
       & img,
       & span {
-        transition: transform 1s ease-in-out;
+        transition: transform 1s ease-in-out, top 1s ease-in-out,
+          left 1s ease-in-out;
       }
 
       & img {
@@ -211,38 +213,50 @@
         &[src*="bookmark-purple"] {
           height: 33.5rem;
           width: 10.75rem;
-          transform: translate(25vw, 30vh);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
 
         &[src*="bookmark-yellow"] {
           height: 33.5rem;
           width: 10.75rem;
-          transform: translate(25vw, 30vh);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
 
         &[src*="pin"] {
           height: 16rem;
           width: 14rem;
-          transform: translate(25vw, 30vh);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
 
         &[src*="vector-book"] {
           height: 1.8rem;
           width: 10rem;
-          transform: translate(25vw, 30vh);
+          top: 22%;
+          left: 40%;
+          transform: translate(-50%, -50%);
         }
 
         &[src*="vector-pin"] {
           height: 8rem;
           width: 6.25rem;
           z-index: 3;
-          transform: translate(25vw, 30vh);
+          top: 50%;
+          left: 35%;
+          transform: translate(-50%, -50%);
         }
 
         &[src*="vector_book_mark"] {
           height: 9.5rem;
           width: 9rem;
-          transform: translate(25vw, 30vh);
+          top: 70%;
+          left: 65%;
+          transform: translate(-50%, -50%);
         }
       }
 
@@ -250,15 +264,21 @@
         font: var(--body-md);
 
         &:nth-child(8) {
-          transform: translate(25vw, 30vh);
+          top: 20%;
+          left: 40%;
+          transform: translate(-50%, -50%);
         }
 
         &:nth-child(9) {
-          transform: translate(25vw, 30vh);
+          top: 50%;
+          left: 35%;
+          transform: translate(-50%, -50%);
         }
 
         &:nth-child(10) {
-          transform: translate(25vw, 30vh);
+          top: 75%;
+          left: 60%;
+          transform: translate(-50%, -50%);
         }
       }
 
@@ -276,44 +296,41 @@
 
         & img {
           &[src*="bookmark-purple"] {
-            transform: rotate(22deg) translate(45.2rem, -4rem);
+            transform: rotate(22deg) translate(85%, -65%);
           }
 
           &[src*="bookmark-yellow"] {
-            transform: rotate(12deg) translate(38rem, -4rem);
+            transform: rotate(12deg) translate(50%, -80%);
           }
 
           &[src*="pin"] {
-            transform: rotate(-7.5deg) translate(-1rem, 38rem);
+            transform: rotate(-7.5deg) translate(-170%, 30%);
           }
 
           &[src*="vector-book"] {
-            transform: translate(5rem, 8rem);
+            transform: translate(-170%, -220%);
           }
 
           &[src*="vector-pin"] {
-            height: 8rem;
-            width: 6.25rem;
-            z-index: 3;
-            transform: translate(1.25rem, 32.5rem);
+            transform: translate(-280%, 35%);
           }
 
           &[src*="vector_book_mark"] {
-            transform: translate(42rem, 44rem);
+            transform: translate(80%, 20%);
           }
         }
 
         & span {
           &:nth-child(8) {
-            transform: translate(1rem, 5rem);
+            transform: translate(-225%, -350%);
           }
 
           &:nth-child(9) {
-            transform: translate(-0.5rem, 30rem);
+            transform: translate(-250%, 35%);
           }
 
           &:nth-child(10) {
-            transform: translate(38rem, 55rem);
+            transform: translate(45%, 600%);
           }
         }
       }
