--- a/styles/monthKit.css
+++ b/styles/monthKit.css
@@ -196,8 +196,7 @@
 
       & img,
       & span {
-        transition: transform 1s ease-in-out, top 1s ease-in-out,
-          left 1s ease-in-out;
+        transition: transform 1s ease-in-out;
       }
 
       & img {
